# LLMWorkshop

./: .env  .gitignore  LLMWorkshop.ipynb  README.md  app.py  models.py  pyproject.toml  run.py  utils.py
app/: __init__.py  routes.py
app/static/: style.css
app/templates/: index.html
lesson_notebooks/: Embedding_Notebook.ipynb  LLM_Notebook.ipynb  Workshop.ipynb  embedding_utils.py  few_shot_batch.jsonl  few_shot_batch_results.jsonl  finetune_batch.jsonl  llm_utils.py
lesson_notebooks/data/translation/: english_french_filtered.csv
static/: styles.css
templates/: index.html
