[tool.poetry]
name = "llmworkshop"
version = "0.1.0"
description = ""
authors = ["Oliver Newcombe <revilo678@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-socketio = "^5.5.0"
gunicorn = "^23.0.0"
openai = "^1.58.1"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
