[tool.poetry]
name = "llmworkshop"
version = "0.1.0"
description = ""
authors = ["Oliver Newcombe <revilo678@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.11"
flask = "^3.1.0"
sqlalchemy = "^2.0.36"
flask-sqlalchemy = "^3.1.1"
gunicorn = "^23.0.0"

ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
