[tool.poetry]
name = "llmworkshop"
version = "0.1.0"
description = ""
authors = ["Oliver Newcombe <revilo678@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.11"
flask = "^3.1.0"
sqlalchemy = "^2.0.36"
flask-sqlalchemy = "^3.1.1"
gunicorn = "^23.0.0"
spacy = "3.7.5"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"
openai = "^1.58.1"
requests = "^2.32.3"
scikit-learn = "^1.6.1"
plotly = "^5.24.1"
nbformat = "^5.10.4"
numpy = "1.26.4"
pandas = "1.5.3"
sentence-transformers = "^3.4.0"
unbabel-comet = "^2.2.4"
matplotlib = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
